# CanOpenDataViewer

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
canopen-common/: Cargo.toml
canopen-common/src/: lib.rs  sdo.rs
canopen-viewer/: Cargo.toml  build.rs
canopen-viewer/src/: communication.rs  config.rs  logging.rs  main.rs
canopen-viewer/src/canopen/: connect.rs  mod.rs
canopen_demo_node/: .gitignore  CO_main_basic.c  Makefile  OD.c  OD.h
examples/: Example.eds  README.md
mock-canopen-node/: Cargo.toml  README.md
mock-canopen-node/src/: main.rs  object_dictionary.rs  sdo_server.rs
src/: communication.rs  main.rs
src/canopen/: connect.rs  mod.rs  sdo.rs
