[workspace]
resolver = "2"
members = [
    "canopen-viewer",
    "canopen-common",
    "mock-canopen-node",
]

# Shared dependencies across workspace (optional but reduces duplication)
[workspace.dependencies]
socketcan = "3.5.0"
tokio = { version = "1.47.1", features = ["full"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }

# This is now a workspace root, not a package
# The actual binaries are in the member crates
