[package]
name = "mock-canopen-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mock-node"
path = "src/main.rs"

[dependencies]
socketcan = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
toml = "0.8"

# Use the shared CANopen protocol library
canopen-common = { path = "../canopen-common" }
